--- a/.github/workflows/update-wallpaper.yml
+++ b/.github/workflows/update-wallpaper.yml
@@ -28,7 +28,8 @@ jobs:
 
       run: |
         # 获取 Bing API 数据
-        curl -s "https://cn.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1&uhd=1&uhdwidth=3840&uhdheight=2160" -o bing.json
+        # curl -s "https://cn.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1&uhd=1&uhdwidth=3840&uhdheight=2160" -o bing.json
+        curl -s "https://global.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1&pid=hp&FORM=BEHPTB&uhd=1&uhdwidth=3840&uhdheight=2160&setmkt=zh-CN&setlang=en" -o bing.json
         # 解析 JSON 获取图片 URL
         URL=$(jq -r '.images[0].url' bing.json)
         FULL_URL="https://cn.bing.com$URL"
