--- a/.github/workflows/update-wallpaper.yml
+++ b/.github/workflows/update-wallpaper.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Setup curl and jq
         run: |
