--- a/.github/workflows/update-wallpaper.yml
+++ b/.github/workflows/update-wallpaper.yml
@@ -55,6 +55,12 @@ jobs:
         run: |
           npm init -y
           npm install puppeteer
+      
+      - name: Install Noto Sans SC Fonts
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-noto-cjk
+          fc-cache -f -v  # 强制刷新字体缓存
 
       - name: Take Screenshot
         run: node screenshot.js
