feat: 更新壁纸截图格式为 JPEG，优化截图分辨率和质量

--- a/.github/workflows/update-wallpaper.yml
+++ b/.github/workflows/update-wallpaper.yml
@@ -77,6 +77,6 @@ jobs:
 
           mkdir -p api
           # git add index.html
-          git add wallpaper-data.json api/today.png api/today_portrait.png
+          git add wallpaper-data.json api/today.jpg api/today_portrait.jpg
           git diff --staged --quiet || git commit -m "🔄 Update Bing wallpaper redirect - $(date +'%Y-%m-%d %H:%M')"
           git push
